# Thestarki-ThermoAE_Inference

./: README.md  pyproject.toml  setup.cfg
dados/: Mf1.csv  Mf2.csv  Mf3.csv  MfHx.csv  Mfboi.csv  Referencia.csv  validacao.csv
src/: RunnerInference.py
src/configs/: .env  config.py
src/db/: db_config.py
src/modelo/: BuildDataloaderInf.py  Modelo.py  ProcessDataInference.py  ReadDataInference.py  SaveDataInference.py
